feat: 웰니스 미션 사이클 및 요인당 3개 미션 저장
- 리포트 생성 시 위험 요인 수만큼 미션 3개씩 저장(LLM 프롬프트·persist 반영)

- 사이클 완료 추적·최대 3슬롯 랜덤 노출(일일 serving 롤오버 제거)

- /today 노출 미션만 완료 가능, /me는 최신 결과 현재 사이클 완료 오버레이

Co-authored-by: Cursor <cursoragent@cursor.com>